@@ -1,17 +1,18 @@
 package com.carrotsearch.progresso;
 
-import java.io.Closeable;
-import java.time.Clock;
-import java.util.Objects;
-
 import com.carrotsearch.progresso.Task.Status;
 
+import java.io.Closeable;
+import java.time.Instant;
+import java.util.Objects;
+import java.util.function.Supplier;
+
 public abstract class Tracker implements Closeable {
-  final static Clock CLOCK = Clock.systemDefaultZone();
+  static final Supplier<Instant> CLOCK = () -> Instant.now();
   final Task<?> task;
 
-  private final long startTime = CLOCK.millis();
-  private Long endTime;
+  private final Instant startTime = CLOCK.get();
+  private Instant endTime;
 
   public Tracker(Task<?> task) {
     this.task = Objects.requireNonNull(task);
@@ -19,31 +20,28 @@ public abstract class Tracker implements Closeable {
 
   public final void close() {
     if (endTime == null) {
-      endTime = CLOCK.millis();
+      endTime = CLOCK.get();
       task.setStatus(Status.DONE);
     }
     close0();
   }
 
-  protected void close0() {
-  }
+  protected void close0() {}
 
   public long startTime() {
-    return startTime;
-  }
-  
-  public long elapsedMillis() {
-    if (endTime == null) {
-      return CLOCK.millis() - startTime;
-    } else {
-      return endTime - startTime;
-    }
+    return startTime.toEpochMilli();
   }
 
-  /**
-   * Trackers must indicate changed state via alternating 
-   * modification counter/ hash.  
-   */
+  public long elapsedMillis() {
+    Instant end = (endTime != null ? endTime : CLOCK.get());
+    return end.toEpochMilli() - startTime.toEpochMilli();
+  }
+
+  public Instant startInstant() {
+    return startTime;
+  }
+
+  /** Trackers must indicate changed state via alternating modification counter/ hash. */
   public abstract long modHash();
 
   public Task<?> task() {
